# qwen-image-mps

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  batman-lint-fixes.patch  pyproject.toml  qwen-image-mps.py  requirements.txt
.github/workflows/: publish.yml  test.yml
src/qwen_image_mps/: __init__.py  cli.py  prompts.py  utils.py
src/qwen_image_mps/_cli/: events.py  main.py  parser.py
src/qwen_image_mps/_cli/commands/: edit.py  generate.py
src/qwen_image_mps/core/: contexts.py  dimensions.py  lora.py  pipelines.py
tests/: test_cli.py
tests/integration/: conftest.py  test_edit_function.py  test_generate_function.py
